# MiniTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample.cpp
MTest/core/Definition/: ASSERT.h  IMiniTestInterceptor.h  MiniTest.h  MiniTestException.h  Sweet.h
MTest/core/Support/: MiniTest.cpp
MTest/include/: MTest.h
